# exomizer-rs

./: .gitignore  Cargo.toml  ChangeLog.md  LICENSE  README.md  check.sh  doc.tbz
examples/: compare.rs
examples/demo/: Readme.md
src/: lib.rs
src/original/: crunch.rs  crunch_options.rs  decrunch.rs  decrunch_options.rs  flags.rs  mod.rs  output.rs  replacement.rs
src/original/converted/: buf.rs  chunkpool.rs  exo_helper.rs  exodec.rs  match.rs  mod.rs  optimal.rs  output.rs  progress.rs  radix.rs  search.rs  vec.rs
src/simple/: common.rs  dynamic.rs  error.rs  generic.rs  mod.rs
tests/: original_crunch.rs  original_decrunch.rs  simple_dynamic.rs  simple_generic.rs
tests/common/: mod.rs
